[gd_scene load_steps=7 format=3 uid="uid://ctx6tx0t2e8ag"]

[ext_resource type="Script" uid="uid://brlm1ixfrk70u" path="res://Scripts/Interactable/falling_spikes.gd" id="1_j00yl"]
[ext_resource type="Texture2D" uid="uid://dfbayclakaw1h" path="res://Art/Palm Tree Island/Sprites/Objects/Spikes/Spikes.png" id="1_mwxpr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_coftw"]
size = Vector2(31, 176)

[sub_resource type="Animation" id="Animation_iqg1c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_r04lx"]
resource_name = "Shake"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fall"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fuu11"]
_data = {
&"RESET": SubResource("Animation_iqg1c"),
&"Shake": SubResource("Animation_r04lx")
}

[node name="FallingSpikes" type="Node2D"]
script = ExtResource("1_j00yl")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("1_mwxpr")

[node name="Hitbox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(5, 0, -12, -1, -15, -6, -15, -16, 16, -16, 16, -10, 12, -4)

[node name="PlayerDetectionZone" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
position = Vector2(0.5, 72)
shape = SubResource("RectangleShape2D_coftw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fuu11")
}

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_area_entered"]
